completed upto experience

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Rohit's Portfolio hosted on GitHub Pages."
     />
 
-    <title>React App</title>
+    <title>Rohit's Portfolio Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
