--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Rohit's Portfolio hosted on GitHub Pages."
+      content="Raj's Portfolio hosted on GitHub Pages."
     />
 
-    <title>Rohit's Portfolio Website</title>
+    <title>Raj's Portfolio Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
